tests/baselines/reference/forInStrictNullChecksNoError.errors.txt
tests/cases/compiler/forInStrictNullChecksNoError.ts(5,5): error TS2533: Object is possibly 'null' or 'undefined'.


==== tests/cases/compiler/forInStrictNullChecksNoError.ts (1 errors) ====
    function f(x: { [key: string]: number; } | null | undefined) {
        for (const key in x) {  // 1
            console.log(x[key]);  // 2
        }
        x["no"]; // should still error
        ~
!!! error TS2533: Object is possibly 'null' or 'undefined'.
    }